<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/contentLinearLayout"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:paddingBottom="16dp"
    android:paddingLeft="16dp"
    android:paddingRight="16dp"
    android:paddingTop="16dp"
    app:layout_behavior="@string/appbar_scrolling_view_behavior"
    tools:context="com.example.sarahbrazauskas.bakequizgame.MainActivity"
    tools:showIn="@layout/activity_main">

    <TextView
        android:id="@+id/topTextView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center_horizontal"
        android:layout_marginBottom="@dimen/spacing"
        android:layout_marginTop="24dp"
        android:text="@string/welcome"
        android:textAlignment="center"
        android:textSize="24sp" />

    <ImageView
        android:id="@+id/mainActivityPicImageView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:contentDescription="@string/main_image_description"
        android:adjustViewBounds="true"
        android:paddingBottom="24dp"
        android:paddingTop="24dp"
        app:srcCompat="@drawable/main_activity_pic" />

    <Button
        android:id="@+id/playButton"
        style="@style/Widget.AppCompat.Button.Colored"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_gravity="center_horizontal"
        android:layout_marginTop="24dp"
        android:text="@string/play_button"
        android:textColor="@color/buttonTextColor"
        android:textSize="30dp" />

</LinearLayout>
